0908 - 실습 미로찾기 완료

--- a/KSH01/KSH01.vcxproj
+++ b/KSH01/KSH01.vcxproj
@@ -126,11 +126,13 @@
     <ClCompile Include="0906weekendPra.cpp" />
     <ClCompile Include="KSH01.cpp" />
     <ClCompile Include="practice_0905.cpp" />
+    <ClCompile Include="practice_0908.cpp" />
     <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="0906weekendPra.h" />
     <ClInclude Include="practice_0905.h" />
+    <ClInclude Include="practice_0908.h" />
     <ClInclude Include="test.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
