--- a/KSH01/KSH01.vcxproj
+++ b/KSH01/KSH01.vcxproj
@@ -125,12 +125,14 @@
   <ItemGroup>
     <ClCompile Include="0906weekendPra.cpp" />
     <ClCompile Include="KSH01.cpp" />
+    <ClCompile Include="practice0909.cpp" />
     <ClCompile Include="practice_0905.cpp" />
     <ClCompile Include="practice_0908.cpp" />
     <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="0906weekendPra.h" />
+    <ClInclude Include="practice0909.h" />
     <ClInclude Include="practice_0905.h" />
     <ClInclude Include="practice_0908.h" />
     <ClInclude Include="test.h" />
