0912 - 주말연습문제 1번 입력받는내용 변경해야함

--- a/KSH01/KSH01.vcxproj
+++ b/KSH01/KSH01.vcxproj
@@ -127,17 +127,23 @@
     <ClCompile Include="KSH01.cpp" />
     <ClCompile Include="practice0909.cpp" />
     <ClCompile Include="practice0910.cpp" />
+    <ClCompile Include="practice0911.cpp" />
+    <ClCompile Include="practice0912.cpp" />
     <ClCompile Include="practice_0905.cpp" />
     <ClCompile Include="practice_0908.cpp" />
     <ClCompile Include="test.cpp" />
+    <ClCompile Include="weekendpra0912.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="0906weekendPra.h" />
     <ClInclude Include="practice0909.h" />
     <ClInclude Include="practice0910.h" />
+    <ClInclude Include="practice0911.h" />
+    <ClInclude Include="practice0912.h" />
     <ClInclude Include="practice_0905.h" />
     <ClInclude Include="practice_0908.h" />
     <ClInclude Include="test.h" />
+    <ClInclude Include="weekendpra0912.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
