--- a/KSH01/KSH01.vcxproj.filters
+++ b/KSH01/KSH01.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="weekendpra0912.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="practice0915.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="test.h">
@@ -72,6 +75,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="weekendpra0912.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="practice0915.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
