--- a/KSH01/KSH01.vcxproj
+++ b/KSH01/KSH01.vcxproj
@@ -129,6 +129,7 @@
     <ClCompile Include="practice0910.cpp" />
     <ClCompile Include="practice0911.cpp" />
     <ClCompile Include="practice0912.cpp" />
+    <ClCompile Include="practice0915.cpp" />
     <ClCompile Include="practice_0905.cpp" />
     <ClCompile Include="practice_0908.cpp" />
     <ClCompile Include="test.cpp" />
@@ -140,6 +141,7 @@
     <ClInclude Include="practice0910.h" />
     <ClInclude Include="practice0911.h" />
     <ClInclude Include="practice0912.h" />
+    <ClInclude Include="practice0915.h" />
     <ClInclude Include="practice_0905.h" />
     <ClInclude Include="practice_0908.h" />
     <ClInclude Include="test.h" />
