--- a/KSH01/KSH01.vcxproj
+++ b/KSH01/KSH01.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="Animal.cpp" />
     <ClCompile Include="Car.cpp" />
     <ClCompile Include="Eagle.cpp" />
+    <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Goblin.cpp" />
     <ClCompile Include="Horse.cpp" />
     <ClCompile Include="KSH01.cpp" />
@@ -157,6 +158,7 @@
     <ClInclude Include="Animal.h" />
     <ClInclude Include="Car.h" />
     <ClInclude Include="Eagle.h" />
+    <ClInclude Include="GameManager.h" />
     <ClInclude Include="Goblin.h" />
     <ClInclude Include="Horse.h" />
     <ClInclude Include="IBattle.h" />
