0918 - 다중연결리스트 InsertAT prev 주소값오류

--- a/KSH01/KSH01.vcxproj
+++ b/KSH01/KSH01.vcxproj
@@ -127,11 +127,13 @@
     <ClCompile Include="Actor.cpp" />
     <ClCompile Include="Animal.cpp" />
     <ClCompile Include="Car.cpp" />
+    <ClCompile Include="DoubleLinkedList.cpp" />
     <ClCompile Include="Eagle.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Goblin.cpp" />
     <ClCompile Include="Horse.cpp" />
     <ClCompile Include="KSH01.cpp" />
+    <ClCompile Include="LinkedList.cpp" />
     <ClCompile Include="Monster.cpp" />
     <ClCompile Include="Oak.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -142,6 +144,7 @@
     <ClCompile Include="practice0915.cpp" />
     <ClCompile Include="practice0916.cpp" />
     <ClCompile Include="practice0917.cpp" />
+    <ClCompile Include="practice0918.cpp" />
     <ClCompile Include="practice_0905.cpp" />
     <ClCompile Include="practice_0908.cpp" />
     <ClCompile Include="Shape.cpp" />
@@ -157,6 +160,7 @@
     <ClInclude Include="Actor.h" />
     <ClInclude Include="Animal.h" />
     <ClInclude Include="Car.h" />
+    <ClInclude Include="DoubleLinkedList.h" />
     <ClInclude Include="Eagle.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="Goblin.h" />
@@ -164,6 +168,7 @@
     <ClInclude Include="IBattle.h" />
     <ClInclude Include="IFlyable.h" />
     <ClInclude Include="ISwimable.h" />
+    <ClInclude Include="LinkedList.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="Oak.h" />
     <ClInclude Include="Player.h" />
@@ -174,6 +179,7 @@
     <ClInclude Include="practice0915.h" />
     <ClInclude Include="practice0916.h" />
     <ClInclude Include="practice0917.h" />
+    <ClInclude Include="practice0918.h" />
     <ClInclude Include="practice_0905.h" />
     <ClInclude Include="practice_0908.h" />
     <ClInclude Include="Shape.h" />
