--- a/KSH01/KSH01.vcxproj
+++ b/KSH01/KSH01.vcxproj
@@ -127,6 +127,7 @@
     <ClCompile Include="Actor.cpp" />
     <ClCompile Include="Animal.cpp" />
     <ClCompile Include="Battleship.cpp" />
+    <ClCompile Include="BinarySearchTree.cpp" />
     <ClCompile Include="Car.cpp" />
     <ClCompile Include="CircularQueue.cpp" />
     <ClCompile Include="CircularQueue2.cpp" />
@@ -150,6 +151,7 @@
     <ClCompile Include="practice0917.cpp" />
     <ClCompile Include="practice0918.cpp" />
     <ClCompile Include="practice0919.cpp" />
+    <ClCompile Include="practice0922.cpp" />
     <ClCompile Include="practice_0905.cpp" />
     <ClCompile Include="practice_0908.cpp" />
     <ClCompile Include="Shape.cpp" />
@@ -166,6 +168,7 @@
     <ClInclude Include="Actor.h" />
     <ClInclude Include="Animal.h" />
     <ClInclude Include="Battleship.h" />
+    <ClInclude Include="BinarySearchTree.h" />
     <ClInclude Include="Car.h" />
     <ClInclude Include="CircularQueue.h" />
     <ClInclude Include="CircularQueue2.h" />
@@ -191,6 +194,7 @@
     <ClInclude Include="practice0917.h" />
     <ClInclude Include="practice0918.h" />
     <ClInclude Include="practice0919.h" />
+    <ClInclude Include="practice0922.h" />
     <ClInclude Include="practice_0905.h" />
     <ClInclude Include="practice_0908.h" />
     <ClInclude Include="Shape.h" />
